$Id$


v0.71.2		16-Jan-2005

	charset:
		Changed rfc-2045 name x-mac to mac. Changed x-ibmpc to cp437.
		This allows rfc mime headers to show official names.

	libdiesel.a:
		Changed the maximum string length from 2560 to 4096 characters.

	mbcico:
		Added protection during binkp receive for zero bytes compressed
		data frames, this will cause uncompress error -5 because zero
		bytes can't be compressed ar all.
		Fixed test for valid aka's in the EMSI handshake that prevented
		that host aka's (node /0) were not presented to the remote.
		(thanks Przemyslaw Kwiatkowski).

	mbfido:
		Empty *.msg netmails for our own system are dropped with and
		logged (just like received empty netmails). Empty netmails to
		remote systems are still stored in the netmail base.
		Added debug logging for exporting netmails from the messagebase
		so that we later can decide to mark these messages auto deleted.

	mbnntp:
		Does now send the right mime headers recognised by news clients.
		Fixed compile problem with some compilers.
		When sending the mime header with the charset used to the news
		client, the original message charset is tried first, else the
		area charset, else the users charset and if all failed, we send
		the us-ascci charset as default.
		More patches added from Dmitry Komissaroff to improve charset
		support. Also improved msgid linking.

	mbtask:
		The created semafore files are now world readable so that low
		privileged users like nobody can check the semafore's.

	html:
		Added batch file upload written by Russell Tiedt to the faq.

	script:
		Fixed the Slackware setup script that didn't make the startup
		symlinks in runlevel 4 if the directory /etc/rc.d/rc4.d didn't
		exist.


v0.71.1		28-Nov-2004 - 16-Jan-2005

	porting:
		Compiles more or less on x86_64, there are issues with utmp
		and struct lastlog
		Compiles on NetBSD i386.
		Compiles on Alpha.
		Doesn't compile on Mac OS X.

	upgrade:
		Make sure you remove everything related to bbslist menus from