@@ -6,6 +6,7 @@ v0.71.2		16-Jan-2005
 	charset:
 		Changed rfc-2045 name x-mac to mac. Changed x-ibmpc to cp437.
 		This allows rfc mime headers to show official names.
+		Added some basic things to support Chinese.
 
 	libdiesel.a:
 		Changed the maximum string length from 2560 to 4096 characters.
